--- a/less/base/_default.less
+++ b/less/base/_default.less
@@ -27,6 +27,8 @@ input {
     padding: 0 15px;
     margin: auto;
     box-sizing: border-box;
+    display: flex;
+    position: fixed;
 }
 .container-fluid {
     width: 100%;
