--- a/less/base/_header.less
+++ b/less/base/_header.less
@@ -12,12 +12,18 @@
     .transit(all, .5s);
 }
 .header {
-    .logo-mobile {
-        text-align: center;
-        display: none;
+    &-logo {
+        background-color: @bg-header;
+        box-sizing: border-box;
+        font-weight: 500;
+        color: @mini-title-color;
+        height: 72px;
+        display: flex;
+        align-items: center;
+        
     }
-    font-size: 12px;
-    &-top {
+    display: flex;
+    &-menu {
         background-color: @bg-header;
         box-sizing: border-box;
         font-weight: 500;
@@ -64,111 +70,99 @@
                 }
             }
         }
-        .sl-language {
-            letter-spacing: 0.02em;
-            img {
-                width: 17px;
-                vertical-align: middle;
-                padding-right: 10px;
-            }
-            a {
-                letter-spacing: 0.02em;
-                color: @text-white-color;
-            }
-        }
     }
-    &-bottom {
-        padding-top: 25px;
-        padding-bottom: 21px;
-        &-inner {
-            .flex();
-            .form-control {
-                display: flex;
-                align-items: center;
-                margin-bottom: 3px;
-                .search {
-                    width: 556px;
-                    form {
-                        height: 38px;
-                        border: 1px solid @title-bg-color;
-                        display: flex;
-                        border-radius: 40px;
-                        overflow: hidden;
-                        .search-sl {
-                            line-height: 38px;
-                            padding-left: 20px;
-                            padding-right: 35px;
-                            select {
-                                border: none;
-                                height: 24px;
-                                .appearance(none);
-                                background-image: url('../img/caret-down.png');
-                                background-repeat: no-repeat;
-                                background-position-x: right;
-                                background-position-y: center;
-                                padding-right: 28px;
-                            }
-                        }
-                        .search-input {
-                            flex: 1;
-                            line-height: 38px;
-                            input {
-                                border: none;
-                                width: 100%;
-                                height: 24px;
-                                border-left: 1px solid #e0e0e0;
-                                padding-left: 15px;
-                                letter-spacing: 0.02em;
-                            }
-                        }
-                        .search-button {
-                            button {
-                                border: none;
-                                background-color: @main-color;
-                                color: @text-white-color;
-                                font-size: 18px;
-                                height: 38px;
-                                line-height: 38px;
-                                width: 57px;
-                                text-align: center;
-                                cursor: pointer;
-                            }
+    // &-bottom {
+    //     padding-top: 25px;
+    //     padding-bottom: 21px;
+    //     &-inner {
+    //         .flex();
+    //         .form-control {
+    //             display: flex;
+    //             align-items: center;
+    //             margin-bottom: 3px;
+    //             .search {
+    //                 width: 556px;
+    //                 form {
+    //                     height: 38px;
+    //                     border: 1px solid @title-bg-color;
+    //                     display: flex;
+    //                     border-radius: 40px;
+    //                     overflow: hidden;
+    //                     .search-sl {
+    //                         line-height: 38px;
+    //                         padding-left: 20px;
+    //                         padding-right: 35px;
+    //                         select {
+    //                             border: none;
+    //                             height: 24px;
+    //                             .appearance(none);
+    //                             background-image: url('../img/caret-down.png');
+    //                             background-repeat: no-repeat;
+    //                             background-position-x: right;
+    //                             background-position-y: center;
+    //                             padding-right: 28px;
+    //                         }
+    //                     }
+    //                     .search-input {
+    //                         flex: 1;
+    //                         line-height: 38px;
+    //                         input {
+    //                             border: none;
+    //                             width: 100%;
+    //                             height: 24px;
+    //                             border-left: 1px solid #e0e0e0;
+    //                             padding-left: 15px;
+    //                             letter-spacing: 0.02em;
+    //                         }
+    //                     }
+    //                     .search-button {
+    //                         button {
+    //                             border: none;
+    //                             background-color: @main-color;
+    //                             color: @text-white-color;
+    //                             font-size: 18px;
+    //                             height: 38px;
+    //                             line-height: 38px;
+    //                             width: 57px;
+    //                             text-align: center;
+    //                             cursor: pointer;
+    //                         }
                             
-                        }
-                    }
-                }
-                .control-item {
-                    color: @main-color;
-                    font-size: 26px;
-                    margin-left: 19px;
-                    .transit(all, 0.5s);
-                    &:hover {
-                        .transformer(rotate(720deg));
-                    }
-                    cursor: pointer;
-                }
-                .cart {
-                    padding-right: 10px;
-                    position: relative;
-                    &::after {
-                        content: attr(data);
-                        font-size: 10px;
-                        color: @text-white-color;
-                        display: block;
-                        width: 15px;
-                        height: 15px;
-                        line-height: 15px;
-                        text-align: center;
-                        border-radius: 15px;
-                        background-color: @bg-header;
-                        position: absolute;
-                        top: 3px;
-                        right: 0;
-                    }
-                }
-            }
-        }
-    }
+    //                     }
+    //                 }
+    //             }
+    //             .control-item {
+    //                 color: @main-color;
+    //                 font-size: 26px;
+    //                 margin-left: 19px;
+    //                 .transit(all, 0.5s);
+    //                 &:hover {
+    //                     .transformer(rotate(720deg));
+    //                 }
+    //                 cursor: pointer;
+    //             }
+    //             .cart {
+    //                 padding-right: 10px;
+    //                 position: relative;
+    //                 &::after {
+    //                     content: attr(data);
+    //                     font-size: 10px;
+    //                     color: @text-white-color;
+    //                     display: block;
+    //                     width: 15px;
+    //                     height: 15px;
+    //                     line-height: 15px;
+    //                     text-align: center;
+    //                     border-radius: 15px;
+    //                     background-color: @bg-header;
+    //                     position: absolute;
+    //                     top: 3px;
+    //                     right: 0;
+    //                 }
+    //             }
+    //         }
+    //     }
+    // }
 }
 .menu-bar {
     padding: 14px 0;
