--- a/less/base/_default.less
+++ b/less/base/_default.less
@@ -1,65 +1,59 @@
-body {
+body{
+    font-family: 'Poppins';
     margin: 0;
     padding: 0;
+
 }
-a {
+
+a{
     color: #000;
-    text-decoration: #000;
-    &:hover {
+    text-decoration: none;
+    &:hover{
         color: #000;
-        text-decoration: underline;
     }
 }
-ul {
+
+ul{
     margin: 0;
     padding: 0;
-    li {
+    li{
         list-style: none;
     }
 }
-input {
+
+h1,h2,h3,h4,p{
+    margin: 0;
     padding: 0;
 }
-// ============ Grid layout
+
+h1{
+font-size: sizes(head1);
+}
+
+
+
+
+// GRID LAYOUT
 .container {
     max-width: 1170px;
     width: 100%;
     padding: 0 15px;
     margin: auto;
     box-sizing: border-box;
-    display: flex;
-    position: fixed;
 }
-.container-fluid {
+
+.container-fruid{
     width: 100%;
     padding: 0 15px;
     box-sizing: border-box;
 }
-.row {
-    display: flex;
+
+
+.row{
+    display: grid;
     flex-wrap: wrap;
     margin: 0 -15px;
 }
-.dropdown {
-    &:hover {
-        .dropdown-content {
-            display: block;
-        }
-    }
-    &-btn {
-        &::after {
-            padding-left: 15px;
-            content: url('../img/caret-down.png');
-        }
-    }
-    &-content {
-        display: none;
-        position: absolute;
-        background-color: @bg-header;
-    }
-}
-body {
-    font-family: "Poppins";
-    font-size: 16px;
-    font-weight: normal;
-}
+
+
+
