--- a/less/content/_slider.less
+++ b/less/content/_slider.less
@@ -1,130 +1,39 @@
-.slider {
+.banner {
     max-height: 750px;
-    overflow: hidden;
-    .slick-arrow {
-        height: 60px;
-        width: 50px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: #ffffff;
-        .transit(all, 0.5s);
-    }
-    .slick-prev {
-        left: 20px;
-        z-index: 10;
-        &:hover {
-            background-color: @main-color;
-            &::before {
-                color: @text-white-color;
-            }
-            &::after {
-                border-top-color: @main-color;
-            }
-        }
-        &::before {
-            font-family: 'Font Awesome 5 Free';
-            font-weight: 900;
-            content: '\f053';
-            font-size: 31px;
-            color: #082b4f;
-            opacity: 1;
-            .transit(all, 0.5s);
-        }
-        &::after {
-            content: '';
-            display: block;
-            width: 0;
-            height: 0;
-            border-top: 60px solid #fff;
-            border-right: 10px solid transparent;
-            position: absolute;
-            top: 0;
-            right: -10px;
-            .transit(all, 0.5s);
-        }
-    }
-    .slick-next {
-        right: 20px;
-        &:hover {
-            background-color: @main-color;
-            &::before {
-                color: @text-white-color;
-            }
-            &::after {
-                border-bottom-color: @main-color;
-            }
-        }
-        &::before {
-            font-family: 'Font Awesome 5 Free';
-            font-weight: 900;
-            content: '\f054';
-            font-size: 31px;
-            color: #082b4f;
-            opacity: 1;
-            .transit(all, 0.5s);
-        }
-        &::after {
-            content: '';
-            display: block;
-            width: 0;
-            height: 0;
-            border-bottom: 60px solid #fff;
-            border-left: 10px solid transparent;
-            position: absolute;
-            top: 0;
-            left: -10px;
-            .transit(all, 0.5s);
-        }
-    }
-    &-item {
-        position: relative;
-        img {
+    position: relative;
+    &-item{
+        img{
             width: 100%;
         }
     }
-    &-content {
+    &-content{
         position: absolute;
         top: 25%;
-        left: 50%;
-        .transformer(translate(-50%, 0));
-        &-inner {
-            .col (58.3333%);
-            .slide-title {
-                .transformer (translate(0,-100px));
-                .transit (all, 1s);
-                letter-spacing: 0.01em;
-                font-size: 70px;
-                font-weight: 500;
-                color: #000;
-                line-height: 89px;
-                span {
-                    color: @main-color;
-                }
-            }
-            .slide-summary {
-                .transformer (translate(-100px, 0));
-                .transit (all, 1s);
-                font-size: 18px;
-                font-weight: 500;
-                color: @summary-color;
-                margin-top: 15px;
-                margin-bottom: 47px;
-            }
-            .slide-btn {
-                display: inline-block;
-                .transformer (translate(0,100px));
-                .transit (all, 1s);
-                font-size: 16px;
-                font-weight: 600;
-                color: #000;
-                text-decoration: none;
-                border-bottom: 2px solid @main-color;
-                padding-bottom: 5px;
-            }
-            .active {
-                .transformer (translate(0,0));
-            }
+        left: 11.05%;
+        width: 37%;
+        color: @text-white-color;
+        h1{
+            font-size: 60px;
+        }
+        h2{
+            font-size: 40px;
+            margin-bottom: 3%;
+        }
+        p{
+            font-size: 14px;
+        }
+        button{
+            background-color: unset;
+            color: @text-white-color;
+            padding: 15px 54.5px;
+            border-color: @text-white-color;
+            text-transform: uppercase;
+            font-size: 14px;
+            margin-top: 11.4%;
+
         }
     }
+}
+.container{
+    
 }
