--- a/less/source/_variable.less
+++ b/less/source/_variable.less
@@ -10,3 +10,7 @@
 @summary-color: #8f8f8f;
 @mini-title-color: #bababa;
 @text-white-color: #fff;
+@text-black-color: #000000;
+@text-red-color:#FF0000;
+@text-gray-color:#DDDDDD;
+@text-bolder-gray-color:#777777;
