--- a/less/content/_homepage_content.less
+++ b/less/content/_homepage_content.less
@@ -69,12 +69,8 @@
         grid-gap: 30px;
         grid-row-gap: 25px;
         
-      .card {
-            width     : 100%;
-            height    : 365px;
             
-            
-            .img-product{
+            .info-product{
             position: relative;
             width   : 270px;
             height  : 350px;
@@ -82,15 +78,15 @@
 
 
             img{
-            position  : absolute;
-            top: 30px;
-            left: 62px;
-            object-fit: cover;
-            transition: 0.5s ease-in-out;
+              margin-top: 10px;
+              margin-left: -7px;
+              object-fit: cover;
+              transition: 0.5s ease-in-out;
+              width: 107%;
           }
           .content{
             margin-left: 30px;
-            margin-top: 245px;
+            margin-top: 20px;
             font-size: 14px;
             line-height: 25px;
           }
@@ -121,15 +117,13 @@
                 background-color: @text-red-color;
                 color: @text-white-color;
               }
-    
-            }
           }
 
         }
             &:hover{
-              .img-product{
                 border: 1px solid rgba(216, 209, 209, 0.808);
-              }
+                box-shadow: -0px -0px 1px 1px @text-gray-color;
+
               .product-icon {
                 transform: translateX(0);
             }
@@ -138,6 +132,38 @@
       }
     }
 }
+.about-us{
+  width: 100%;
+  text-align: center; 
+   h1{         
+     margin-top: 111px;
+     font-size: 36px;
+    }
+    img{
+      margin-top: 47px;
+      margin-bottom: -30px;
+      width: 150px;
+      clip-path: circle(29px at 47% 29%);
+    }
+    p{
+      color: #999999;
+      font-size: 18px;
+      width: 53%;
+      margin-left: 340px;
+      line-height: 30px;
+      margin-bottom: 30px;
+    }
+    h4{
+      text-transform: uppercase;
+      font-size: 18px;
+      margin-bottom: 15px;
+    }
+    span{
+      font-size: 14px;
+      color: #999999;
+    }
+  }
+                    
           
 
              
