--- a/less/base/_default.less
+++ b/less/base/_default.less
@@ -1,59 +1,55 @@
-body{
-    font-family: 'Poppins';
-    margin: 0;
-    padding: 0;
-
+body {
+  font-family: "Poppins";
+  margin: 0;
+  padding: 0;
 }
 
-a{
+a {
+  color: #000;
+  text-decoration: none;
+  &:hover {
     color: #000;
-    text-decoration: none;
-    &:hover{
-        color: #000;
-    }
+  }
 }
 
-ul{
-    margin: 0;
-    padding: 0;
-    li{
-        list-style: none;
-    }
+ul {
+  margin: 0;
+  padding: 0;
+  li {
+    list-style: none;
+  }
 }
 
-h1,h2,h3,h4,p{
-    margin: 0;
-    padding: 0;
+h1,
+h2,
+h3,
+h4,
+p {
+  margin: 0;
+  padding: 0;
 }
 
-h1{
-font-size: sizes(head1);
+h1 {
+  font-size: sizes(head1);
 }
-
-
-
 
 // GRID LAYOUT
 .container {
-    max-width: 1170px;
-    width: 100%;
-    padding: 0 15px;
-    margin: auto;
-    box-sizing: border-box;
+  max-width: 1170px;
+  width: 100%;
+  padding: 0 15px;
+  margin: auto;
+  box-sizing: border-box;
 }
 
-.container-fruid{
-    width: 100%;
-    padding: 0 15px;
-    box-sizing: border-box;
+.container-fruid {
+  width: 100%;
+  padding: 0 15px;
+  box-sizing: border-box;
 }
 
-
-.row{
-    display: grid;
-    flex-wrap: wrap;
-    margin: 0 -15px;
+.row {
+  display: grid;
+  flex-wrap: wrap;
+  margin: 0 -15px;
 }
-
-
-
