--- a/less/base/_header.less
+++ b/less/base/_header.less
@@ -1,46 +1,43 @@
-.header{
-    background-color: rgba(0,0,0,0.6); 
-    padding: 0 -15px;
-    position:fixed;
-    z-index: 1;
-    top: 0;
-    width: 100vw;
+.header {
+  background-color: rgba(0, 0, 0, 0.6);
+  padding: 0 -15px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  width: 100vw;
 
-    .navbar{
-        max-width: 1170px;
-        width: 100%;
-        margin: auto;
-        padding: 23px 15px;
-        box-sizing: border-box;
-        display: flex;
-        align-items: center;
+  .navbar {
+    max-width: 1170px;
+    width: 100%;
+    margin: auto;
+    padding: 23px 15px;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
 
-        .nav-links{
-            display: flex;
-            margin: 0 90px;
-            font-size: 16px;
+    .nav-links {
+      display: flex;
+      margin: 0 90px;
+      font-size: 16px;
 
-            a{
-                padding: 0 25px;
-                color: @text-white-color;
-            }
-
-        }
-        .control{
-            display: flex;
-            align-items: center;
-            .line{
-                color: @text-white-color;
-            }
-            &-items{
-                margin: 0 25px;
-                color: @text-white-color;
-                a{
-                    color: @text-white-color;
-                }
-            }
-        }
-
-
+      a {
+        padding: 0 25px;
+        color: @text-white-color;
+      }
     }
+    .control {
+      display: flex;
+      align-items: center;
+      .line {
+        color: @text-white-color;
+      }
+      &-items {
+        margin: 0 25px;
+        color: @text-white-color;
+        a {
+          color: @text-white-color;
+        }
+      }
+    }
+  }
 }
