--- a/less/source/_variable.less
+++ b/less/source/_variable.less
@@ -1,16 +1,10 @@
 // Color
-@main-color: #0ca8c9;
-@border-color: #0ba7c9;
-@bg-banner: #f0f0f0;
-@bg-item: #f5f5f5;
-@bg-footer: #f2f2f2;
-@bg-header: #222;
-@title-color: #000;
-@title-bg-color: #ebebeb;
-@summary-color: #8f8f8f;
-@mini-title-color: #bababa;
+@bg-footer: #222222;
+@border-color: #D3D3D3;
+@bg-color: #ebebeb;
 @text-white-color: #fff;
 @text-black-color: #000000;
 @text-red-color:#FF0000;
 @text-gray-color:#DDDDDD;
 @text-bolder-gray-color:#777777;
+@text-boldest-gray-color: #999999;
