--- a/less/content/_slider.less
+++ b/less/content/_slider.less
@@ -1,15 +1,16 @@
 .banner {
-  max-height: 750px;
+  max-height: 950px;
   position: relative;
   &-item {
     img {
+      display: block;
       width: 100%;
     }
   }
   &-content {
     position: absolute;
-    top: 25%;
-    left: 11.05%;
+    top: 220px;
+    left: 161px;
     width: 37%;
     color: @text-white-color;
     h1 {
@@ -17,7 +18,7 @@
     }
     h2 {
       font-size: 40px;
-      margin-bottom: 3%;
+      margin-bottom: 15px;
     }
     p {
       font-size: 14px;
@@ -29,24 +30,25 @@
       border-color: @text-white-color;
       text-transform: uppercase;
       font-size: 14px;
-      margin-top: 11.4%;
+      margin-top: 75px;
     }
   }
 }
 .grid-container {
-  top: 89%;
+  top: 672px;
   display: grid;
   position: absolute;
   text-align: center;
   grid-template-columns: 390px 390px 390px;
   background-color: @text-white-color;
-  margin-left: 10.5%;
+  margin-left: 161px;
 
   .intro-box {
     height: 250px;
     text-align: center;
     object-fit: cover;
     img {
+      display: block;
       width: 100%;
       height: 100%;
     }
