--- a/less/source/_variable.less
+++ b/less/source/_variable.less
@@ -1,10 +1,11 @@
 // Color
-@bg-footer: #222222;
+@bg-footer: #222;
 @border-color: #D3D3D3;
 @bg-color: #ebebeb;
 @text-white-color: #fff;
-@text-black-color: #000000;
+@text-black-color: #000;
 @text-red-color:#FF0000;
 @text-gray-color:#DDDDDD;
-@text-bolder-gray-color:#777777;
-@text-boldest-gray-color: #999999;
+@text-bolder-gray-color:#777;
+@text-boldest-gray-color: #999;
+@bg-copyright:#000;
