--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,6 @@ h1 {
 }
 .header {
   background-color: rgba(0, 0, 0, 0.6);
-  padding: 0 -15px;
   position: fixed;
   z-index: 1;
   top: 0;
@@ -75,14 +74,14 @@ h1 {
   max-width: 1170px;
   width: 100%;
   margin: auto;
-  padding: 23px 15px;
+  padding: 23px 0;
   box-sizing: border-box;
   display: flex;
   align-items: center;
 }
 .header .navbar .nav-links {
   display: flex;
-  margin: 0 90px;
+  margin: 0 78px;
   font-size: 16px;
 }
 .header .navbar .nav-links a {
@@ -104,16 +103,17 @@ h1 {
   color: #fff;
 }
 .banner {
-  max-height: 750px;
+  max-height: 950px;
   position: relative;
 }
 .banner-item img {
+  display: block;
   width: 100%;
 }
 .banner-content {
   position: absolute;
-  top: 25%;
-  left: 11.05%;
+  top: 220px;
+  left: 161px;
   width: 37%;
   color: #fff;
 }
@@ -122,7 +122,7 @@ h1 {
 }
 .banner-content h2 {
   font-size: 40px;
-  margin-bottom: 3%;
+  margin-bottom: 15px;
 }
 .banner-content p {
   font-size: 14px;
@@ -134,16 +134,16 @@ h1 {
   border-color: #fff;
   text-transform: uppercase;
   font-size: 14px;
-  margin-top: 11.4%;
+  margin-top: 75px;
 }
 .grid-container {
-  top: 89%;
+  top: 672px;
   display: grid;
   position: absolute;
   text-align: center;
   grid-template-columns: 390px 390px 390px;
   background-color: #fff;
-  margin-left: 10.5%;
+  margin-left: 161px;
 }
 .grid-container .intro-box {
   height: 250px;
@@ -151,6 +151,7 @@ h1 {
   object-fit: cover;
 }
 .grid-container .intro-box img {
+  display: block;
   width: 100%;
   height: 100%;
 }
@@ -176,7 +177,7 @@ h1 {
   width: 290px;
   margin-top: 20px;
   line-height: 27px;
-  color: #777777;
+  color: #777;
 }
 .grid-container .intro-box-dumbbells {
   box-shadow: -3px -1px 6px -1px #bbbbbb;
@@ -185,9 +186,7 @@ h1 {
   box-shadow: 5px 4px 5px -4px #bbbbbb;
 }
 .listing {
-  margin-top: 33.6%;
-  margin-left: 10.5%;
-  margin-right: 10.5%;
+  margin: 502px 145px 0 161px;
 }
 .listing .name-content {
   font-size: 18px;
@@ -228,7 +227,7 @@ h1 {
 .listing ul li a {
   position: relative;
   display: flex;
-  color: #000000;
+  color: #000;
   font-weight: bold;
   text-decoration: none;
   transition: 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
@@ -260,6 +259,7 @@ h1 {
   overflow: hidden;
 }
 .listing .main-listing .list-item .info-product img {
+  display: block;
   margin-top: 10px;
   margin-left: -7px;
   object-fit: cover;
@@ -289,7 +289,7 @@ h1 {
   border: 1px solid;
   margin-bottom: 17px;
   border-color: #D3D3D3;
-  color: #777777;
+  color: #777;
   background-color: #ebebeb;
   border-top-left-radius: 5px;
   border-bottom-right-radius: 5px;
@@ -306,34 +306,35 @@ h1 {
   transform: translateX(0);
 }
 .about-us {
-  width: 100%;
-  text-align: center;
+  width: 52%;
+  margin: 0 358px 30px;
 }
 .about-us h1 {
-  margin-top: 111px;
+  margin: 111px 0 0 140px;
   font-size: 36px;
 }
 .about-us img {
-  margin-top: 47px;
-  margin-bottom: -30px;
+  display: block;
+  margin: 47px 0 -30px 340px;
   width: 150px;
   clip-path: circle(29px at 47% 29%);
 }
 .about-us p {
-  color: #999999;
+  color: #999;
   font-size: 18px;
-  width: 53%;
-  margin: 0 340px 30px;
+  margin: 0 -12px 42px -8px;
+  text-align: center;
   line-height: 30px;
 }
 .about-us h4 {
   text-transform: uppercase;
   font-size: 18px;
-  margin-bottom: 15px;
+  margin: 0 0 15px 386px;
 }
 .about-us span {
+  margin: 0 0 0 359px;
   font-size: 14px;
-  color: #999999;
+  color: #999;
 }
 .about-us .slick-list {
   margin: 0 -15px;
@@ -344,8 +345,8 @@ h1 {
 }
 .about-us .slick-dots {
   position: absolute;
-  bottom: -50px;
-  left: 50%;
+  bottom: -58px;
+  left: 54%;
   transform: translate(-50%, 0);
   display: flex;
   align-items: center;
@@ -357,7 +358,7 @@ h1 {
   width: 13px;
   height: 13px;
   border-radius: 100rem;
-  background-color: #777777;
+  background-color: #777;
   opacity: 0.5;
   border: none;
   outline: none;
@@ -372,7 +373,7 @@ h1 {
 }
 .branch {
   border-top: 1px solid rgba(216, 209, 209, 0.808);
-  margin: 145px 155px 0 160px;
+  margin: 145px 145px 0 160px;
   text-align: center;
 }
 .branch img {
@@ -380,14 +381,17 @@ h1 {
 }
 .footer {
   width: 100%;
-  background-color: #222222;
+  background-color: #222;
+  overflow: hidden;
+  box-sizing: border-box;
 }
 .footer-info {
   text-align: center;
   font-size: 14px;
-  color: #999999;
+  color: #999;
 }
 .footer-info img {
+  display: block;
   padding: 100px 0 20px;
 }
 .footer-info p {
@@ -398,21 +402,52 @@ h1 {
   margin: 0 20px 60px;
 }
 .footer-content {
+  display: flex;
   border-top: 1px solid rgba(216, 209, 209, 0.808);
-  margin: 0 160px;
+  margin: 0 144px 0 161px;
 }
-.footer-content .contact-us h4 {
+.footer-content h4 {
   text-transform: uppercase;
   color: #fff;
   font-size: 18px;
-  margin: 80px 0 40px;
+  margin: 80px 174px 40px 0;
 }
-.footer-content .contact-us li {
+.footer-content li {
   font-size: 14px;
-  color: #777777;
+  color: #777;
   margin: 0 0 30px;
 }
 .footer-content .contact-us span {
   margin-left: 25px;
+}
+.footer .copyright p {
+  padding: 15px;
+  background-color: #000;
+  font-size: 14px;
+  text-align: center;
+  color: #777;
+}
+@media all and (max-width: 1170px) {
+  .header {
+    width: 129vw;
+  }
+  .header .navbar img {
+    width: 160px;
+  }
+  .header .navbar img-item {
+    margin: 0px 8px;
+  }
+  .banner-content h1 {
+    font-size: 50px;
+  }
+  .banner-content h2 {
+    font-size: 40px;
+  }
+  .banner-content p {
+    font-size: 11px;
+  }
+  .banner-content button {
+    font-size: 10px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
