--- a/less/base/_header.less
+++ b/less/base/_header.less
@@ -1,6 +1,5 @@
 .header {
   background-color: rgba(0, 0, 0, 0.6);
-  padding: 0 -15px;
   position: fixed;
   z-index: 1;
   top: 0;
@@ -10,14 +9,14 @@
     max-width: 1170px;
     width: 100%;
     margin: auto;
-    padding: 23px 15px;
+    padding: 23px 0;
     box-sizing: border-box;
     display: flex;
     align-items: center;
 
     .nav-links {
       display: flex;
-      margin: 0 90px;
+      margin: 0 78px;
       font-size: 16px;
 
       a {
