--- a/less/content/_homepage_content.less
+++ b/less/content/_homepage_content.less
@@ -1,7 +1,5 @@
 .listing {
-  margin-top: 33.6%;
-  margin-left: 10.5%;
-  margin-right: 10.5%;
+  margin: 502px 145px 0 161px;
 
   .name-content {
     font-size: 18px;
@@ -75,6 +73,7 @@
         overflow: hidden;
 
         img {
+          display: block;
           margin-top: 10px;
           margin-left: -7px;
           object-fit: cover;
@@ -128,31 +127,34 @@
   }
 }
 .about-us {
-  width: 100%;
-  text-align: center;
+  width: 52%;
+  margin: 0 358px 30px;
+  
+  
   h1 {
-    margin-top: 111px;
+    margin: 111px 0 0 140px;
     font-size: 36px;
   }
   img {
-    margin-top: 47px;
-    margin-bottom: -30px;
+    display: block;
+    margin: 47px 0 -30px 340px;
     width: 150px;
     clip-path: circle(29px at 47% 29%);
   }
   p {
     color: @text-boldest-gray-color;
     font-size: 18px;
-    width: 53%;
-    margin: 0 340px 30px;
+    margin: 0 -12px 42px -8px;
+    text-align: center;
     line-height: 30px;
   }
   h4 {
     text-transform: uppercase;
     font-size: 18px;
-    margin-bottom: 15px;
+    margin: 0 0 15px 386px;
   }
   span {
+    margin: 0 0 0 359px;
     font-size: 14px;
     color: @text-boldest-gray-color;
   }
@@ -167,8 +169,8 @@
   }
   .slick-dots {
     position: absolute;
-    bottom: -50px;
-    left: 50%;
+    bottom: -58px;
+    left: 54%;
     transform: translate(-50%, 0);
     display: flex;
     align-items: center;
@@ -199,7 +201,7 @@
 }
 .branch {
   border-top: 1px solid rgba(216, 209, 209, 0.808);
-  margin: 145px 155px 0 160px;
+  margin: 145px 145px 0 160px;
   text-align: center;
   img {
     padding: 40px 40px 40px 20px;
